@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Enums ---
enum Veredito {
    APROVADO
    REPROVADO
}

' --- Classes Relevantes ---
abstract class Usuario {
    # matricula : string
    # nome : string
    # email : string
    # senha : string
    # unidade : Unidade
    # precisa_redefinir_senha : bool
}

class Coordenador extends Usuario {
}

class Area {
    - id : int
    - nome : string
    - coordenador : FK<Coordenador>
}

class Processo {
    - id : int
    - nome_empresa : string
    - data_criacao : Date
    - status : StatusProcesso
    - aluno : FK<Aluno>
    - coordenacao : FK<Coordenador>
    - secretaria : FK<Secretaria>
    - criado_por : string
    + nome_processo() : string
}

class Relatorio {
}

abstract class HistoricoAvaliacao {
    - id : int
    - observacoes : string
    - data_avaliacao : Date
    - veredito : Veredito
}

class HistoricoAvaliacaoRelatorio extends HistoricoAvaliacao {
    - avaliador : FK<Coordenador>
    - relatorio_id : FK<Relatorio>
}

' --- Relacionamentos ---
Area "1" -- "1" Coordenador : coordenador >
Coordenador "1" -- "0..*" Processo : valida >
Coordenador "1" -- "0..*" HistoricoAvaliacaoRelatorio : avalia >
Relatorio "1" -- "0..1" HistoricoAvaliacaoRelatorio : possui >

@enduml
